# Banking-System-gRPC

./: .gitignore  README.md
BankingClient/: .gitignore  pyproject.toml
BankingClient/proto/: banking.proto
BankingClient/src/: banking_pb2.py  banking_pb2_grpc.py  gen_stubs.py  logger.py  main.py  math_pb2.py  math_pb2_grpc.py
BankingServer/: build.gradle.kts  pom.xml  settings.gradle.kts
BankingServer/gradle/wrapper/: gradle-wrapper.properties
BankingServer/src/main/java/org/paul/: BankingServer.java  BankingService.java  LoggingInterceptor.java  Main.java  MathServer.java  MathService.java
BankingServer/src/main/proto/: banking.proto  math.proto
BankingServer/src/main/resources/: log4j2.xml
docs/: PLAN.md  TASK.md
docs/MathGRPC/: instructiuni.txt  pom.xml
docs/MathGRPC/src/main/java/grpc1/: MathClient.java  MathImpl.java  MathServerMain.java
docs/MathGRPC/src/main/proto/: math.proto
